                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2020-10-22
 * Fix bug in wing.vue.js date-time component.

2020-10-19
 * Fixed a bug where wing.vue.js wing.object.save() wouldn't save if the value was 0.
 * Fixed a bug that prevents objects from being recycled by resetting the fetch_api.

2020-10-18
 * Fixed wing.vue.js wing.object.on_delete bug introduced on 2020-10-16.

2020-10-17
 * Added db_class_name option to generate_options, generate_relationship, generate_all_relationships, generate_read, generate_create, generate_delete, and generate_update in Wing::Rest for API migration tasks.
 * Added custom handler to duplicate method in Result so that you can manipulate the copy before data is copied into it.

2020-10-16
 * Updated on_create, on_delete, and on_update to each return a reference to the object as their second parameter in wing.vue.js.
 * Removed vestigial self.id from wing.vue.js wing.object. 

2020-10-15
 * Small refinements to wing-pagination columns.

2020-10-12
 * Added percent-from-decimal component to wing.vue.js.

2020-10-09
 * Exposed "scroll_to_id" prop on wing-pagination component. Pagination defaults to scrolling up to "app". If you want something else specify it here.
 * Minor refactoring of ideas system.
 * Converted ideas templates to Vue.
 * Added slot called "above-add-comment" to wing.vue.js <comments> component.

2020-10-08
 * Exposed Wing::Util::commify() to Wing::Template.
 * wing.vue.js markdown-editor component exposes a default slot so you can place content below the editor.

2020-10-05
 * In wing.vue.js added set_fetch_api() on wing.object.

2020-10-01
 * Made the algolia search code a bit more elegant to make it easier to implement their recommended retry strategy.