@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2020-10-24
+ * Remove autosave on markdown editor.
+
 2020-10-22
  * Fix bug in wing.vue.js date-time component.
 
